<resources>
    <string name="app_name">RoWiCoCe</string>
    <string name="title_setup">Setup</string>
    <string name="title_movement">Movement</string>
    <string name="title_custom">Custom</string>
    <string name="robot_service_address_initial">192.168.15.139</string>
    <string name="robot_service_port_initial">5050</string>
    <string name="button_test_connection_label">Test connection</string>
    <string name="setup_screen_title_label">Connection setup</string>
    <string name="movement_screen_title_label">Robot movement</string>
    <string name="custom_screen_title_label">Custom commands</string>
    <string name="address_label">Address:</string>
    <string name="port_label">Port:</string>
    <string name="stop_button_content_description">Stop</string>
    <string name="rotate_right_button_content_description">Rotate right</string>
    <string name="rotate_left_button_content_description">Rotate left</string>
    <string name="right_button_content_description">Right</string>
    <string name="left_button_content_description">Left</string>
    <string name="forward_button_content_description">Forward</string>
    <string name="backward_button_content_description">Backward</string>
    <string name="forward_pressed_message">forward_pressed</string>
    <string name="forward_released_message">forward_released</string>
    <string name="backward_pressed_message">backward_pressed</string>
    <string name="backward_released_message">backward_released</string>
    <string name="right_pressed_message">right_pressed</string>
    <string name="right_released_message">right_released</string>
    <string name="left_pressed_message">left_pressed</string>
    <string name="left_released_message">left_released</string>
    <string name="stop_pressed_message">stop_pressed</string>
    <string name="stop_released_message">stop_released</string>
    <string name="rotate_right_pressed_message">rotate_right_pressed</string>
    <string name="rotate_right_released_message">rotate_right_released</string>
    <string name="rotate_left_pressed_message">rotate_left_pressed</string>
    <string name="rotate_left_released_message">rotate_left_released</string>
    <string name="custom_button_send_label">Send</string>
    <string name="custom10">custom10</string>
    <string name="custom1">custom1</string>
    <string name="custom2">custom2</string>
    <string name="custom3">custom3</string>
    <string name="custom4">custom4</string>
    <string name="custom5">custom5</string>
    <string name="custom6">custom6</string>
    <string name="custom8">custom8</string>
    <string name="custom9">custom9</string>
    <string name="save_connection_data">Save connection data</string>
    <string name="save_custom_commands">Save custom commands</string>
    <string name="stop">Stop</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="r_r">R. R.</string>
    <string name="r_l">R. L.</string>
    <string name="faster">Faster</string>
    <string name="slower">Slower</string>
    <string name="buzz">Buzz!</string>
    <string name="buzzer_pressed_message">buzzer_pressed</string>
    <string name="speed_increase_pressed_message">speed_increase_pressed</string>
    <string name="speed_increase_released_message">speed_increase_released</string>
    <string name="speed_decrease_pressed_message">speed_decrease_pressed</string>
    <string name="speed_decrease_released_message">speed_decrease_released</string>
    <string name="buzzer_released_message">buzzer_released</string>
</resources>
