<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movement.MovementFragment">

    <com.faizkhan.mjpegviewer.MjpegView
        android:id="@+id/mjpegid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buzzerButton"
        app:layout_constraintEnd_toStartOf="@+id/decreaseSpeedButton"
        app:layout_constraintStart_toEndOf="@+id/rightButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/stop"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/leftButton"
        app:layout_constraintTop_toBottomOf="@+id/forwardButton" />

    <Button
        android:id="@+id/forwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/stopButton"
        app:layout_constraintStart_toStartOf="@+id/stopButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/backward"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/stopButton"
        app:layout_constraintStart_toStartOf="@+id/stopButton"
        app:layout_constraintTop_toBottomOf="@+id/stopButton" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/right"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/stopButton"
        app:layout_constraintStart_toEndOf="@+id/stopButton"
        app:layout_constraintTop_toTopOf="@+id/stopButton" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/left"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/stopButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stopButton" />

    <Button
        android:id="@+id/rotateRightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/r_r"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/rightButton"
        app:layout_constraintTop_toTopOf="@+id/forwardButton" />

    <Button
        android:id="@+id/rotateLeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/r_l"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="@+id/forwardButton" />

    <Button
        android:id="@+id/increaseSpeedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faster"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/decreaseSpeedButton"
        app:layout_constraintStart_toStartOf="@+id/decreaseSpeedButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decreaseSpeedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/slower"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increaseSpeedButton" />

    <Button
        android:id="@+id/buzzerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzz"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/backwardButton"
        app:layout_constraintEnd_toStartOf="@+id/decreaseSpeedButton"
        app:layout_constraintStart_toEndOf="@+id/rightButton"
        app:layout_constraintTop_toTopOf="@+id/backwardButton" />

</androidx.constraintlayout.widget.ConstraintLayout>